# aimet

./: .clang-format  .dockerignore  .gitignore  .omniscanignore  .pylintrc  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  a  a_test_file.txt  buildntest.sh  dobuildntest.sh  pyproject.toml  pytest.ini  repolint.json  repolinter.json
Docs/: CMakeLists.txt  conf.py  toplevelhidden.rst
Docs/_static/: style.css
Docs/_templates/: layout.html  variants.html  versions.html
Docs/_templates/autosummary/: class.rst  function.rst
Docs/api_docs/: convert_tf_sess_to_keras.rst  index.rst  keras.rst  keras_adaround.rst  keras_batchnorm_re_estimation.rst  keras_compression.rst  keras_cross_layer_equalization.rst  keras_layer_output_generation.rst  keras_mixed_precision.rst  keras_model_guidelines.rst  keras_model_preparer.rst  keras_primitive_apis_cle.rst  keras_quant_analyzer.rst  keras_quantization.rst  keras_quantsim.rst  onnx.rst  onnx_adaround.rst  onnx_auto_quant.rst  onnx_cross_layer_equalization.rst  onnx_layer_output_generation.rst  onnx_mixed_precision.rst  onnx_quant_analyzer.rst  onnx_quantization.rst  onnx_quantsim.rst  quantization_encoding_specification.rst  tensorflow.rst  tensorflow_adaround.rst  tensorflow_auto_quant.rst  tensorflow_batchnorm_re_estimation.rst  tensorflow_bias_correction.rst  tensorflow_compress.rst  tensorflow_cross_layer_equalization.rst  tensorflow_layer_output_generation.rst  tensorflow_model_guidelines.rst  tensorflow_primitive_apis_cle.rst  tensorflow_quant_analyzer.rst  tensorflow_quantization.rst  tensorflow_quantsim.rst  tensorflow_visualization_quantization.rst  torch.rst  (+24 more)
Docs/install/: index.rst  install_docker.rst  install_host.rst
Docs/keras_code_examples/: adaround.py  bn_reestimation_example.py  compression_code_examples.py  layer_output_generation_code_example.py  mixed_precision.py  model_preparer_code_example.py  post_training_techniques_examples.py  quant_analyzer_code_example.py  quantization.py
Docs/onnx_code_examples/: adaround.py  auto_quant_v2.py  cross_layer_equalization.py  layer_output_generation_code_example.py  mixed_precision.py  quant_analyzer_code_example.py  quantization.py
Docs/tf_code_examples/: adaround.py  auto_quant.py  bn_reestimation_example.py  code_examples.py  converting_tf_session_to_keras.py  layer_output_generation_code_example.py  post_training_techniques_examples.py  quant_analyzer_code_example.py  quantization.py  range_learning.py  visualization.py  weight_svd.py
Docs/torch_code_examples/: adaround.py  architecture_checker_code_example.py  auto_quant.py  auto_quant_v2.py  bn_reestimation_example.py  code_examples.py  layer_output_generation_code_example.py  mixed_precision.py  model_preparer_code_example.py  model_validator_code_example.py  post_training_techniques_examples.py  quant_analyzer_code_example.py  quantsim_code_example.py  quantsim_config_example.py  range_learning.py  spconv3d_example.py  visualization.py  visualization_compression.py  visualization_quantization.py
Docs/torch_docs/: blockwise_quantization.rst  conf.py  encoding_analyzer.rst  gptvq.rst  index.rst  percentile_encoding_analyzer.rst  quantized_modules.rst  quantizer.rst  sqnr_encoding_analyzer.rst
Docs/torch_docs/api/: nn.fake_quantization_mixin.rst  nn.quantization_mixin.rst  q.encoding_analyzer.rst  q.quantized_tensor.rst  visualization_tools.rst
Docs/torch_docs/examples/: end_to_end_pipeline.rst  ptq.rst  qat.rst
Docs/torch_docs/tutorials/: aimet_models.rst  extending_aimet.rst  migration_guide.rst  quantization_overview.rst  quickstart.rst  quickstart_guide.ipynb  quickstart_guide.rst
Docs/user_guide/: adaround.rst  aimet_google_colab.rst  auto_quant.rst  bn_reestimation.rst  channel_pruning.rst  compression_feature_guidebook.rst  examples.rst  feature_guidebook.rst  greedy_compression_ratio_selection.rst  index.rst  known_issues.rst  model_compression.rst  model_guidelines.rst  model_quantization.rst  post_training_quant_techniques.rst  quant_analyzer.rst  quantization_aware_training.rst  quantization_configuration.rst  quantization_encoding_specification.md  quantization_feature_guidebook.rst  quantization_sim.rst  quantsim_2.0_overview.rst  release_notes.rst  spatial_svd.rst  visualization_compression.rst  visualization_quant.rst  weight_svd.rst  winnowing.rst
ModelOptimizations/: CMakeLists.txt
ModelOptimizations/DlBackendAwareQuantization/: CMakeLists.txt
ModelOptimizations/DlCompression/: CMakeLists.txt
ModelOptimizations/DlCompression/src/: SvdAlgorithm.cpp  SvdAlgorithm.hpp  math_functions.cpp  math_functions.cu  math_functions.hpp  pack_functions.cpp  pack_functions.hpp
ModelOptimizations/DlCompression/test/: CMakeLists.txt  test_dlcompression_svd.cpp
ModelOptimizations/DlEqualization/: CMakeLists.txt
ModelOptimizations/DlEqualization/src/: BatchNormFold.cpp  BatchNormFoldForPython.cpp  BiasCorrection.cpp  BiasCorrectionForPython.cpp  CrossLayerScaling.cpp  CrossLayerScalingForPython.cpp  HighBiasFold.cpp  HighBiasFoldForPython.cpp  ScaleFactorCalculator.cpp  ScaleFactorCalculator.h  TensorOperations.cpp  TensorOperations.h
ModelOptimizations/DlEqualization/test/: CMakeLists.txt  TestDLEqualization.cpp
ModelOptimizations/DlQuantization/: CMakeLists.txt
ModelOptimizations/DlQuantization/src/: EncodingAnalyzerForPython.cpp  EntropyEncodingAnalyzer.cpp  EntropyEncodingAnalyzer.h  Fp16Quantization.cpp  GraphQuantizer.cpp  IQuantizationAlgorithm.hpp  MainQuantizationClass.cpp  MainQuantizationClass.hpp  MseEncodingAnalyzer.cpp  MseEncodingAnalyzer.h  ParserModule.cpp  PercentileEncodingAnalyzer.cpp  PercentileEncodingAnalyzer.h  QuantizerFactory.cpp  TensorQuantizationSim.cpp  TensorQuantizationSim.h  (+21 more)
ModelOptimizations/PyModelOptimizations/: CMakeLists.txt  PyModelOptimizations.cpp  PyTensorQuantizer.cpp  PyTensorQuantizer.hpp
TrainingExtensions/: CMakeLists.txt
TrainingExtensions/common/: CMakeLists.txt
TrainingExtensions/onnx/: CMakeLists.txt
TrainingExtensions/tensorflow/: CMakeLists.txt
TrainingExtensions/torch/: CMakeLists.txt
(+1208 files in other folders)
